src/test/deca/context/valid/custom/builtin_function/readfloat.deca
{
float x ;
x=readFloat() ;
println(0.5*(x*x)) ;
}