src/test/deca/context/invalid/custom/assign_int_float.deca
{
int a = 1;
float b = 1.0;
a = a+b;
}